--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
+
+<!--    View Inventory Fragment-->
     <string name="app_name">Inventory App</string>
+    <string name="view_inventory_fragment_name">Store Inventory</string>
+    <string name="empty_inventory_view_tite">Your Inventory is Empty</string>
+    <string name="empty_inventory_view_desc">Please click on add button below to add items to your inventory</string>
+    <string name="add_button_text">Add</string>
+    <string name="edit_button_text">Edit</string>
+    <string name="network_status_offline_text">Offline</string>
+    <string name="network_status_online_text">Online</string>
+
+<!--    Uppload Inventory Fragment-->
+    <string name="upload_inventory_fragment_name">Upload Inventory</string>
+    <string name="search_button_text">Search</string>
+    <string name="save_button_text">Save</string>
+
 </resources>
