adding check skuid logic unfinished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="item_name">Item name</string>
     <string name="manufacturer">Manufacturer</string>
 
-    <!--    View Inventory Fragment-->
+<!--    View Inventory Fragment-->
     <string name="app_name">Inventory App</string>
     <string name="view_inventory_fragment_name">Store Inventory</string>
     <string name="empty_inventory_view_tite">Your Inventory is Empty</string>
@@ -19,7 +19,7 @@
     <string name="select_button_text">Select</string>
     <string name="search_inventory_fragment_name">Search SKUs</string>
 
-    <!--    Uppload Inventory Fragment-->
+<!--    Upload Inventory Fragment-->
     <string name="upload_inventory_fragment_name">Upload Inventory</string>
     <string name="search_button_text">Search</string>
     <string name="save_button_text">Save</string>
